<resources>
    <string name="app_name">Edkul</string>
    <string name="action_settings">Settings</string>
    <string name="welcomePage">Welcome to Edkul</string>
    <string name="loginEmail">Email</string>
    <string name="loginPassword">Password</string>
    <string name="loginButton">Login</string>
    <string name="forgotPass">Forgot Password?</string>
    <string name="notonEdkul">Not on Edkul?</string>
    <string name="joinNow">Join Now</string>
    <string name="title_activity_recover_password">RecoverPassword</string>
    <string name="recoverPassword">Recover Your password</string>
    <string name="enterMail">Enter Your Mail ID</string>
    <string name="recoverymailAddress">Email</string>
    <string name="title_activity_join__as_">Join_AS_A</string>
    <string name="joinAsA">Join As A ...</string>
    <string name="joinasaStudent">Student</string>
    <string name="joinasaTeacher">Teacher</string>
    <string name="joinasaparent">Parent</string>
    <string name="joinNext">Next</string>
    <string name="title_activity_student__signup">Student_Signup</string>
    <string name="studentSignup">SignUp</string>
    <string name="studentName">Name:</string>
    <string name="studentEmail">Email</string>
    <string name="studentPassword">Password</string>
    <string name="studentcPassword">Confirm Password</string>
    <string name="studentContact">Conatct No.</string>
    <string name="title_activity_teacher__signup">Teacher_Signup</string>
    <string name="teacherSignup">SignUp</string>
    <string name="teacherName">Teacher name</string>
    <string name="teacherEmail">Email</string>
    <string name="teacherPassword">Password</string>
    <string name="teachercPassword">Confirm Password</string>
    <string name="teacherContact">Contact No.</string>
    <string name="teacherInstitute">Institute Name</string>
    <string name="title_activity_parent__signup">Parent_Signup</string>
    <string name="parentSignup">SignUp</string>
    <string name="parentName">ParentName</string>
    <string name="parentEmail">Email</string>
    <string name="parentPassword">Password</string>
    <string name="parentCPassword">Confirm Password</string>
    <string name="parentContact">Contact No.</string>
    <string name="parent_studentName">StudentName</string>
    <string name="instituteName">Institute Name</string>
    <string name="nextButton2">Next</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="changePassword">Change Your Password</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="userprofile">Layout for this page and next pages after that</string>
    <string name="studentProfile">UserProfile</string>
    <string name="submitStudent">Submit</string>
    <string name="studentInstitute">Name</string>
    <string name="teacherSubmit">Submit</string>
    <string name="parentSubmit">Submit</string>
    <string name="userImage">userImage</string>
    <string name="userProfile">Profile</string>
    <string name="myDashboard">My Dashboard</string>
    <string name="myDashboard1">myDashboard</string>
    <string name="myDashboard2">myDashboard2</string>
    <string name="myDashboard3">myDashboard3</string>
    <string name="myDashboard4">myDashboard4</string>
    <string name="myDashboard5">myDashboard5</string>
    <string name="myDashboard6">myDashboard6</string>
    <string name="subscribeCourse">Subscribe Course</string>
    <string name="manageTest"><![CDATA[Manage Test &DPP]]></string>
    <string name="sheduler">Scheduler</string>
    <string name="library">Library</string>
    <string name="marketing">Marketing</string>
    <string name="updates">Updates</string>
    <string name="title_activity_subscribe__course">Subscribe_Course</string>
    <string-array name="instituteSpinner">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="title_activity_manage_test">Manage_test</string>
    <string name="title_activity_scheduler">Scheduler</string>
    <string name="title_activity_library">Library</string>
    <string name="title_activity_marketing">Marketing</string>
    <string name="title_activity_updates">Updates</string>
    <string name="courseName">Course Name</string>
    <string name="subscribeText">Subscribe</string>
    <string name="selectInstitute">Select Institute Name : </string>
    <string name="selectCoursename">Select Course Name : </string>
    <string name="selectGroup">Select Group Name : </string>
    <string name="selectSubject">Select Subject Name : </string>
</resources>
