<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/pic6"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.edkul.vimal.edkul.Teacher_Signup">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/teacherSignup"
        android:id="@+id/textView4"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/teacherName"
        android:ems="10"
        android:textColorHint="@android:color/holo_blue_light"
        android:width="300dp"
        android:textSize="25sp"
        android:padding="5dp"
        android:id="@+id/teacherName"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/teacherEmail"
        android:hint="@string/teacherEmail"
        android:textColorHint="@android:color/holo_blue_light"
        android:width="300dp"
        android:textSize="25sp"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/teacherName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/teacherPassword"
        android:layout_marginTop="20dp"
        android:textColorHint="@android:color/holo_blue_light"
        android:width="300dp"
        android:textSize="25sp"
        android:padding="5dp"
        android:id="@+id/teacherPassword"
        android:layout_below="@+id/teacherEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/teacherCpassword"
        android:textColorHint="@android:color/holo_blue_light"
        android:width="300dp"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:padding="5dp"
        android:hint="@string/teachercPassword"
        android:layout_below="@+id/teacherPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:hint="@string/teacherContact"
        android:layout_marginTop="20dp"
        android:textColorHint="@android:color/holo_blue_light"
        android:width="300dp"
        android:textSize="25sp"
        android:padding="5dp"
        android:id="@+id/contactInfo"
        android:layout_below="@+id/teacherCpassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:textColorHint="@android:color/holo_blue_light"
        android:width="300dp"
        android:textSize="25sp"
        android:padding="5dp"
        android:hint="@string/teacherInstitute"
        android:id="@+id/teacherInstitute"
        android:layout_below="@+id/contactInfo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teacherSubmit"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:id="@+id/submitButton2"
        android:background="@drawable/custom_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp" />
</RelativeLayout>
