<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/pic5"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.edkul.vimal.edkul.Student_Signup"
    android:id="@+id/studentSignup">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/studentSignup"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="71dp"
        android:layout_marginStart="71dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/studentName"
        android:ems="10"
        android:textColorHint="@android:color/holo_blue_light"
        android:textSize="25sp"
        android:width="300dp"
        android:padding="5dp"
        android:id="@+id/userName"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:textColorHint="@android:color/holo_blue_light"
        android:width="300dp"
        android:padding="5dp"
        android:textSize="25sp"
        android:id="@+id/passWord"
        android:hint="@string/studentEmail"
        android:layout_below="@+id/userName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:textColorHint="@android:color/holo_blue_light"
        android:width="300dp"
        android:textSize="25sp"
        android:padding="5dp"
        android:id="@+id/studentPassword"
        android:layout_marginTop="20dp"
        android:hint="@string/studentPassword"
        android:layout_below="@+id/passWord"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:textColorHint="@android:color/holo_blue_light"
        android:width="300dp"
        android:textSize="25sp"
        android:padding="5dp"
        android:id="@+id/studentCpassword"
        android:layout_marginTop="20dp"
        android:hint="@string/studentcPassword"
        android:layout_below="@+id/studentPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:width="300dp"
        android:textSize="25sp"
        android:padding="5dp"
        android:hint="@string/studentContact"
        android:textColorHint="@android:color/holo_blue_light"
        android:id="@+id/studentContact"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/studentCpassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/studentInstitute"
        android:ems="10"
        android:width="300dp"
        android:textSize="25sp"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@android:color/holo_blue_light"
        android:id="@+id/studentInstitute"
        android:layout_below="@+id/studentContact"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitStudent"
        android:id="@+id/submitStudent"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:onClick="addButtonClicked"
        android:background="@drawable/custom_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/studentInstitute" />

</RelativeLayout>
