<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/pic8"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.edkul.vimal.edkul.Parent_Signup"
    tools:showIn="@layout/activity_parent__signup">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/parentSignup"
        android:id="@+id/textView7"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/parentName"
        android:ems="10"
        android:textColorHint="@android:color/holo_blue_light"
        android:width="300dp"
        android:textSize="25sp"
        android:padding="5dp"
        android:layout_marginTop="15dp"
        android:id="@+id/parentName"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:textColorHint="@android:color/holo_blue_light"
        android:width="300dp"
        android:textSize="25sp"
        android:padding="5dp"
        android:hint="@string/parentEmail"
        android:id="@+id/parentEmail"
        android:layout_below="@+id/parentName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:textColorHint="@android:color/holo_blue_light"
        android:width="300dp"
        android:textSize="25sp"
        android:padding="5dp"
        android:hint="@string/parentPassword"
        android:id="@+id/parentPassword"
        android:layout_below="@+id/parentEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:textColorHint="@android:color/holo_blue_light"
        android:width="300dp"
        android:textSize="25sp"
        android:padding="5dp"
        android:hint="@string/parentCPassword"
        android:id="@+id/parentCpassword"
        android:layout_below="@+id/parentPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:textColorHint="@android:color/holo_blue_light"
        android:width="300dp"
        android:textSize="25sp"
        android:padding="5dp"
        android:hint="@string/parentContact"
        android:id="@+id/parentContact"
        android:layout_below="@+id/parentCpassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/parent_studentName"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:textColorHint="@android:color/holo_blue_light"
        android:width="300dp"
        android:textSize="25sp"
        android:padding="5dp"
        android:id="@+id/parentStudent"
        android:layout_below="@+id/parentContact"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Institute"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:textColorHint="@android:color/holo_blue_light"
        android:width="300dp"
        android:textSize="25sp"
        android:padding="5dp"
        android:id="@+id/parentInstitute"
        android:layout_below="@+id/parentStudent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parentSubmit"
        android:id="@+id/submitButton3"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:background="@drawable/custom_button"
        android:layout_below="@+id/parentInstitute"
        android:layout_alignRight="@+id/textView7"
        android:layout_alignEnd="@+id/textView7" />
</RelativeLayout>
